2004-02-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/span-dynamic-performer.cc (process_music): deprecate span-type.

	* scripts/lilypond-book.py (Lilypond_snippet.notice_include):
	write .dep file.
	(Lilypond_snippet.ly): add \renameinput.

2004-02-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Markup command definition): Doc
	by Nicolas Sceaux. Rewrite by Han-Wen

	* lily/lyric-hyphen.cc (brew_molecule): remove if hyphen is first
	thing of the line.
	(brew_molecule): only remove if hyphen is not at the end of line.
	(set_spacing_rods): new function: minimum-length specifies
	distance between syllables.

	* scm/define-grobs.scm (all-grob-descriptions): add
	Hyphen_spanner::set_spacing_rods to LyricHyphen

	* input/regression/lyric-hyphen-break.ly: new file.

	* input/test/lyric-hyphen-retain.ly: new file.

	* lily/new-part-combine-iterator.cc (construct_children):
	add Rest direction.

2004-02-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Snippet.replacement_text): add method.

	* Documentation/bibliography/engraving.bib (donemus1982):
	update entry.

2004-02-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond.py (option_definitions): Fix typo.

2004-02-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Substring.__init__): new class.
	(Snippet.output_texinfo): add texidoc option.
	(Include_snippet.replacement_text): new class.
	(Lilypond_snippet.__init__): new class
	(Lilypond_snippet.get_hash): bugfix: use full body for hashing.

	* Documentation/user/refman.itely (Sound): 
	note about number of channels.

	* scm/music-functions.scm (voicify-music): add \context Staff for
	<< \\ >> polyphony.

	* lily/parser.yy (verbose_command_req): \skip now creates
	SkipMusic, and does not lead to spurious staves.

	* scm/define-music-types.scm (music-descriptions): rename
	NonEventSkip to SkipMusic

	* input/no-notation/midi-lyric-barcheck.ly: new file.
