@@ -1,5 +1,12 @@
 2004-02-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/paper-score.cc (process): move gc stat stuff to init.ly 
+
+	* lily/parser.yy (music_output_def_body): plug memory leak.
+
+	* lily/translator-group.cc (add_fresh_group_translator): plug
+	memory leak: unprotect Translator_group once added.   
+
 	* lily/span-dynamic-performer.cc (process_music): deprecate span-type.
 
 	* scripts/lilypond-book.py (Lilypond_snippet.notice_include):
